--- a/Web App/public/Home.html
+++ b/Web App/public/Home.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TravLR</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>TravLR</h1>
+    <div id="mySidenav" class="sidenav">
+        <div class="sidenav-header">
+            <a class="nav-header" href="Home.html"><h2>Home</h2></a> 
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        </div>
+        
+        <a href="" class="">History</a>
+        <a href="" class="">Wishlist</a>
+        <a href="" class="">Settings</a>
+    </div>
+    <div class="Heading">
+        <h1 class="title">TravLR</h1>
+        <p onclick="openNav()" class="Hamburger">&#8801;</p>
+    </div>
+
+    <p style="text-align: center;">Welcome to TravLR, your ultimate travel companion!</p>
+
+    <div id="map"></div>
+
+    <script>
+        var map = L.map('map').setView([20, 0], 2);
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
+        }).addTo(map);
+
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
 </body>
+
 </html>
